# CoinBot.v3

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  cargo.toml  docker-compose.yml
.github/workflows/: ci.yml
api_gateway/: Cargo.toml  Dockerfile
api_gateway/src/: config.rs  constants.rs  lib.rs  main.rs  routes.rs  state.rs
api_gateway/src/db/: deposit.rs
api_gateway/src/handlers/: mod.rs  transaction.rs
api_gateway/src/handlers/tests/: mod.rs  test_deposit.rs  test_list.rs
api_gateway/src/handlers/user/: auth.rs  mod.rs
api_gateway/src/models/: contracts.rs  err.rs  mod.rs  transaction.rs
api_gateway/src/services/: rpc.rs
common/: Cargo.toml  build.rs
common/src/: lib.rs
common/src/db/: deposit.rs
deposit-worker/: Cargo.toml  Dockerfile
deposit-worker/src/: deposit_sweeper.rs  grpc_handler.rs  lib.rs  main.rs  task.rs
deposit-worker/tests/: rate_limit.rs
docs/: docker.txt
lib/common/: Cargo.toml  build.rs
lib/share/src/: erc20.rs
lib/share/tests/: erc20_transfer.rs
migrations/: 20250531_add_user_uid.sql  20250531_create_users.sql  20260601_initial.sql
process/api_gateway/: Cargo.toml  Dockerfile
process/api_gateway/src/: constants.rs  state.rs
process/api_gateway/src/handlers/: contracts.rs  mod.rs
process/api_gateway/src/handlers/tests/: test_auth.rs  test_deposit.rs
process/api_gateway/src/models/: transaction.rs
process/deposit-worker/: Cargo.toml
process/deposit-worker/src/: deposit_sweeper.rs  main.rs
process/migrations/: 20260603_add_user_balances.sql  20260610_add_contracts.sql
proto/: README.md  wallet.proto
prototypes/crates/common/: Cargo.toml  build.rs
prototypes/crates/deposit/: Cargo.toml
prototypes/crates/withdrawal/: Cargo.toml
prototypes/grpc-example/: Cargo.toml
prototypes/grpc-example/proto/: wallet.proto
prototypes/grpc-example/src/: client.rs  server.rs
prototypes/proto/: README.md  wallet.proto
react/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
react/.github/workflows/: ci.yml
react/src/: App.css  App.tsx  index.css  main.tsx  test-setup.ts
react/src/components/: auth_guard.jsx  auth_guard.test.tsx  auth_guard.tsx  bg.tsx  (+1 more)
scripts/: test-api.sh
server/: Cargo.toml  Dockerfile
server/src/: config.rs  lib.rs  main.rs  routes.rs
server/src/handlers/user/: auth.rs
server/src/handlers/user/tests/: test_auth.rs
server/src/models/: auth.rs
share/: Cargo.toml
share/src/: lib.rs  logger.rs  rpc.rs
system_architecture/: news_trader_agent_blueprint.md
system_architecture/trade-engine/: README.md
(+74 files in other folders)
