[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
anyhow = "1.0.102"
env_logger = "0.11.8"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
serde = "1.0.228"
log = "0.4.29"
moka = { version = "0.12.15", features = ["future"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "uuid", "bigdecimal", "chrono", "runtime-tokio", "tls-native-tls","macros"] }
ethers = "2.0.14"
thiserror = "2.0.18"
kucoin = "0.7.4" #{path ="../../kucoin", version = "0.7.3"}
dotenvy = "0.15.7"
actix-cors = "0.7.1"
rand = "0.10.1"
serde_json = "1.0.149"
tokio = "1.52.1"

