[package]
name = "deposit"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../common" }
share = { path = "../../share" }
tonic = "0.12"
tonic-health = "0.12"
tokio = { version = "1", features = ["full"] }
sqlx.workspace = true
dotenvy.workspace = true
log.workspace = true
kucoin.workspace = true
